--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,4 +1,6 @@
 name: 'Hello World'
+on:
+  workflow_dispatch:    
 description: 'Greet someone and record the time'
 inputs:
   who-to-greet:  # id of input
